crates/bitnet-feature-matrix/tests/snapshots/snapshot_tests__execution_environment_display_variants.snap
---
source: crates/bitnet-feature-matrix/tests/snapshot_tests.rs
expression: displays
---
[
    "local",
    "ci",
    "pre-prod",
    "production",
]
