crates/bitnet-feature-matrix/tests/snapshots/snapshot_tests__feature_line_invariant.snap
---
source: crates/bitnet-feature-matrix/tests/snapshot_tests.rs
expression: "format!(\"starts_with_features={} non_empty={}\", line.starts_with(\"features:\"),\n!line.is_empty())"
---
starts_with_features=true non_empty=true
