crates/bitnet-feature-matrix/tests/snapshots/snapshot_tests__feature_set_cpu_only_labels.snap
---
source: crates/bitnet-feature-matrix/tests/snapshot_tests.rs
expression: fs.labels()
---
[
    "cpu",
]
