crates/bitnet-feature-matrix/tests/snapshots/snapshot_tests__feature_set_multiple_labels_sorted.snap
---
source: crates/bitnet-feature-matrix/tests/snapshot_tests.rs
expression: fs.labels()
---
[
    "cpu",
    "inference",
    "wasm",
]
