crates/bitnet-feature-matrix/tests/snapshots/snapshot_tests__testing_scenario_display_variants.snap
---
source: crates/bitnet-feature-matrix/tests/snapshot_tests.rs
expression: displays
---
[
    "unit",
    "integration",
    "e2e",
    "performance",
    "crossval",
    "smoke",
    "development",
    "debug",
    "minimal",
]
